gcc/testsuite/rust/rustc/ui/terminal-width/whitespace-trimming-2.rs
// ignore-tidy-linelength

fn foo() -> usize {
                                                                                                                                                                                          ()
// { dg-error ".E0308." "" { target *-*-* } .-1 }
}

fn main() {}

